--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "glob": "^7.1.6",
     "jquery": "^3.5.1",
     "list-react-files": "^0.2.0",
     "popper.js": "^1.16.1",
+    "rc-slider": "^9.7.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-contextmenu": "^2.14.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
