--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "glob": "^7.1.6",
     "jquery": "^3.5.1",
     "list-react-files": "^0.2.0",
+    "local-storage": "^2.0.0",
     "popper.js": "^1.16.1",
     "rc-slider": "^9.7.1",
     "react": "^17.0.1",
