--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.4.0",
     "react-contextmenu": "^2.14.0",
     "react-dom": "^17.0.1",
+    "react-player-controls": "^1.1.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
