--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sbplaylist.me/",
+  "homepage": "https://rkfzhang.github.io/better-playlist/",
   "name": "better-playlist",
   "version": "0.1.0",
   "private": true,
